app/kubernetes/manifests/20-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: restapi-flask
  name: restapi-flask
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restapi-flask
  template:
    metadata:
      labels:
        app: restapi-flask
    spec:
      containers:
      - image: restapi-flask:latest
        name: restapi-flask
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
