app/kubernetes/manifests/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: restapi-flask
  name: restapi-flask
  namespace: api
spec:
  ports:
  - port: 5000
  selector:
    app: restapi-flask
